Fix: copyright footer align, pagination on home and reset password

--- a/src/Components/Footer/Footer.module.css
+++ b/src/Components/Footer/Footer.module.css
@@ -54,6 +54,11 @@
   max-width: 30rem;
 }
 
+.copyright {
+  display: flex;
+  align-items: end;
+}
+
 .centeredFooter {
   padding: 1rem;
 }
